--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "seed": "node script/seed.js",
     "start": "node server/index.js",
     "start-dev": "nodemon server/index.js --ignore public --ignore client & webpack -w",
-    "test": "SET NODE_ENV=test & mocha {server,client}/**/*.test.js --require @babel/polyfill --require @babel/register"
+    "test": "NODE_ENV=test mocha {server,client}/**/*.test.js --require @babel/polyfill --require @babel/register"
   },
   "keywords": [],
   "author": "",
